test/bad/5.cc
int main()
{
    double x, y, z;
    x = 4 + 4;
}